--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "css-background-size",
+  "style": "background-size.css",
   "version": "0.0.5",
   "homepage": "http://github.com/mrmrs/css-background-size",
   "description": "Css module of single purpose classes for background size",
