--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "tachyons-cli": "^0.3.2"
   },
   "scripts": {
-    "start": "tachyons src/tachyons-base.css > css/tachyons-base.css && tachyons src/tachyons-base.css --minify > css/tachyons-base.min.css && tachyons src/tachyons-base.css --generate-docs --package=../../package.json > readme.md"
+    "start": "tachyons src/css-background-size.css > css/css-background-size.css && tachyons src/css-background-size.css --minify > css/css-background-size.min.css && tachyons src/css-background-size.css --generate-docs --package=../../package.json > readme.md"
   }
 }
